--- a/src/main/resources/templates/admin/userManagement.html
+++ b/src/main/resources/templates/admin/userManagement.html
@@ -22,6 +22,11 @@
         let targetUserId = null;
         let targetUserRole = null;
         let targetUserOrgRole = null;
+        let reason = null;
+        let banUserId = null;
+        let banUserName = null;
+        let banUserEmail = null;
+        let banUserPhoneNumber = null;
 
         $(document).ready(function () {
             if (SS_USER == null) {
@@ -42,22 +47,15 @@
                 targetUserOrgRole = $(this).data("role");
             });
 
-            $(document).on("click", ".ban-btn", function () {
-                targetUserId = $(this).data("id");
-                location.href="/health/reminder?prescriptionId="+selectedPrescriptionId;
-            });
-
-            // 복용 시기 선택
+            // 권한 선택
             $(".role-btn").on("click", function () {
                 $(".role-btn").removeClass("selected"); // 모든 버튼에서 selected 제거
                 $(this).addClass("selected"); // 클릭한 버튼에만 selected 추가
+                targetUserRole = $(this).data("value");
             });
 
-            // 알림 설정 확인
+            // 권한 변경 확인
             $("#confirmRoleBtn").on("click", function () {
-                $(".role-btn.selected").each(function () {
-                    targetUserRole = $(this).data("value");
-                });
 
                 if (targetUserRole === null) {
                     alert("권한을 선택해주세요.");
@@ -69,7 +67,7 @@
                 console.log("targetUserOrgRole : ", targetUserOrgRole);
 
                 if (loginRole === "admin" && targetUserOrgRole  === "super") {
-                    alert("상위 권한 사용자는 삭제할 수 없습니다.");
+                    alert("상위 권한 사용자의 권한은 변경할 수 없습니다.");
                     closeRoleModal();
                     return
                 }
@@ -101,6 +99,73 @@
             $("#closeRoleModal").on("click", function () {
                 closeRoleModal();
             });
+
+            $(document).on("click", ".banUser", function () {
+                banUser(this);
+                $("#banModal").addClass("show")
+            });
+
+            // 차단 사유 선택
+            $(".ban-btn").on("click", function () {
+                $(".ban-btn").removeClass("selected"); // 모든 버튼에서 selected 제거
+                $(this).addClass("selected"); // 클릭한 버튼에만 selected 추가
+                targetUserOrgRole = $(this).data("role");
+                reason = $(this).data("value");
+
+                console.log("reason :", reason);
+
+                if (reason === "기타") {
+                    $("#inputReason").addClass("show")
+                } else {
+                    $("#setReason").val(reason);
+                }
+            });
+
+            // 차단 확인
+            $("#confirmBanBtn").on("click", function () {
+                reason = $("#setReason").val();
+
+                if (reason === null) {
+                    alert("사유를 선택해주세요.");
+                    closeBanModal();
+                    return
+                }
+
+                console.log("reason : ", reason);
+
+                if (loginRole === "admin" && targetUserOrgRole  === "super") {
+                    alert("상위 권한 사용자는 차단할 수 없습니다.");
+                    closeBanModal();
+                    return
+                }
+
+                $.ajax({
+                    type: "POST",
+                    url: "/admin/banUser",
+                    data: JSON.stringify({
+                        userId: banUserId,
+                        userName: banUserName,
+                        userEmail: banUserEmail,
+                        phoneNumber: banUserPhoneNumber,
+                        reason: reason
+                    }),
+                    contentType: "application/json",
+                    success: function (json) {
+                        userList = json.data;
+                        console.log("userList : ", userList);
+                        renderUserList(userList);
+                        $("#inputReason").removeClass("show")
+                        closeBanModal();
+                    },
+                    error: function () {
+                        alert("오류발생");
+                    }
+                });
+            });
+
+            $("#closeBanModal").on("click", function () {
+                closeBanModal();
+            });
         });
 
         function closeRoleModal() {
@@ -108,6 +173,18 @@
             $(".role-btn").removeClass("selected");
             targetUserOrgRole = null;
             targetUserRole = null;
+        }
+
+        function closeBanModal() {
+            $("#inputReason").removeClass("show")
+            $("#banModal").removeClass("show");
+            $(".ban-btn").removeClass("selected");
+            targetUserOrgRole = null;
+            banUserId = null;
+            banUserName = null;
+            banUserEmail = null;
+            banUserPhoneNumber = null;
+            reason = null;
         }
 
         function getUserList() {
@@ -142,7 +219,7 @@
                 const roleText = role === 'super' ? '슈퍼' : (role === 'admin' ? '관리자' : '회원');
 
                 const itemHtml = `
-                    <div id="user-${item.userId}" class="status-card">
+                    <div id="user-${userId}" class="status-card">
                         <div class="content">
                             <div class="user-id items">${userId}</div>
                             <div class="user-name items">${userName}</div>
@@ -151,19 +228,32 @@
                             <div class="user-email items">${userEmail}</div>
                             <div class="user-phoneNumber items">${phoneNumber}</div>
                             <div class="user-role items"
-                                    data-id="${userId}"
-                                    data-role="${role}">
-                                    ${roleText}
+                                 data-id="${userId}"
+                                 data-role="${role}">
+                                 ${roleText}
                             </div>
-                            <button class="manage-btn" data-id="${userId}" id="ban-btn">
+                            <button class="manage-btn banUser"
+                                    data-user-id="${userId}"
+                                    data-user-name="${userName}"
+                                    data-user-email="${userEmail}"
+                                    data-user-phone="${phoneNumber}"
+                                    data-role="${role}">
                                 차단
                             </button>
                         </div>
                     </div>
                 `;
 
+
                 container.append(itemHtml);
             });
+        }
+
+        function banUser(btn){
+            banUserId = $(btn).data('user-id');
+            banUserName = $(btn).data('user-name');
+            banUserEmail = $(btn).data('user-email');
+            banUserPhoneNumber = $(btn).data('user-phone');
         }
     </script>
 </head>
@@ -201,7 +291,7 @@
     </div>
 </div>
 
-<!-- 모달 -->
+<!-- 권한 변경 모달 -->
 <div class="modal" id="roleModal">
     <div class="modal-content">
         <h3>권한 변경</h3>
@@ -212,9 +302,29 @@
             <div class="role-btn" data-value="user">회원</div>
         </div>
 
-        <div class="modal-buttons" id="modalBtnWrapper">
+        <div class="modal-buttons" id="roleModalBtnWrapper">
             <button id="closeRoleModal">닫기</button>
             <button id="confirmRoleBtn">확인</button>
+        </div>
+    </div>
+</div>
+
+<!-- 차단 모달 -->
+<div class="modal" id="banModal">
+    <div class="modal-content">
+        <h3>권한 변경</h3>
+
+        <div class="ban-options" id="banOptionWrapper">
+            <div class="ban-btn" data-value="비정상유저">비정상유저</div>
+            <div class="ban-btn" data-value="신고 누적">신고 누적</div>
+            <div class="ban-btn" data-value="기타">기타</div>
+        </div>
+        <div id="inputReason">
+            <input type="text" name="reason" placeholder="차단 사유를 입력하세요." id="setReason">
+        </div>
+        <div class="modal-buttons" id="banModalBtnWrapper">
+            <button id="closeBanModal">닫기</button>
+            <button id="confirmBanBtn">확인</button>
         </div>
     </div>
 </div>
