AI 챗봇 상담 내역 삭제 기능 추가 완료

--- a/src/main/resources/static/css/navStyles.css
+++ b/src/main/resources/static/css/navStyles.css
@@ -81,3 +81,10 @@ nav a:hover {
 .justify-right {
     justify-content: right;
 }
+
+.nav-group {
+    flex-wrap: nowrap;
+}
+nav a {
+    white-space: nowrap;
+}
