--- a/src/main/resources/templates/health/auth.html
+++ b/src/main/resources/templates/health/auth.html
@@ -7,6 +7,8 @@
     <title>간편인증 페이지</title>
     <link rel="stylesheet" href="/css/authStyles.css">
     <link rel="stylesheet" href="/css/navStyles.css">
+    <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css' rel='stylesheet' type='text/css'>
+    <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-jp.css' rel='stylesheet' type='text/css'>
     <script type="text/javascript" src="/js/jquery-3.6.0.min.js"></script>
     <script src="/js/setReferrer.js" defer></script>
     <script th:inline="javascript">
