--- a/src/main/resources/templates/map/map.html
+++ b/src/main/resources/templates/map/map.html
@@ -6,6 +6,8 @@
 
     <link rel="stylesheet" href="/css/navStyles.css">
     <link rel="stylesheet" href="/css/mapStyles.css">
+    <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css' rel='stylesheet' type='text/css'>
+    <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-jp.css' rel='stylesheet' type='text/css'>
 
     <script type="text/javascript" th:src="@{/js/jquery-3.6.0.min.js}"></script>
     <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=512ac014b725c9a5fdc6f6f9f778bfeb&libraries=services,geometry"></script>
