--- a/src/main/resources/templates/health/prescriptionList.html
+++ b/src/main/resources/templates/health/prescriptionList.html
@@ -7,6 +7,8 @@
     <!-- 공통 스타일 -->
     <link rel="stylesheet" th:href="@{/css/authStyles.css}">
     <link rel="stylesheet" th:href="@{/css/navStyles.css}">
+    <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css' rel='stylesheet' type='text/css'>
+    <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-jp.css' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/css/card.css">
 
     <!-- 이 페이지 전용 스타일 -->
