--- a/src/main/resources/templates/health/reminder.html
+++ b/src/main/resources/templates/health/reminder.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="/css/card.css">
     <link rel="stylesheet" href="/css/reminderStyles.css">
     <link rel="stylesheet" href="/css/navStyles.css">
+    <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css' rel='stylesheet' type='text/css'>
+    <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-jp.css' rel='stylesheet' type='text/css'>
 
     <script type="text/javascript" th:src="@{/js/jquery-3.6.0.min.js}"></script>
     <script src="/js/setReferrer.js" defer></script>
