관리자 회원관리 차단회원관리 css 수정

--- a/src/main/resources/static/css/userManagementtStyles.css
+++ b/src/main/resources/static/css/userManagementtStyles.css
@@ -149,6 +149,10 @@
     overflow-y: scroll;
 }
 
+#user-list::-webkit-scrollbar {
+    width: 0;   /* 세로 스크롤바 너비 */
+}
+
 .user-role:hover {
     cursor: pointer;
 }
