--- a/src/main/resources/templates/admin/banUserManagement.html
+++ b/src/main/resources/templates/admin/banUserManagement.html
@@ -138,7 +138,7 @@
                 <!--                <img src="/icons/userManagement.png" alt="회원 관리 아이콘">-->
             </div>
             <div class="title" style="font-weight: bold; font-size: x-large">차단 회원 관리</div>
-            <div id="user-list"></div>
+            <div id="user-list" style="padding-top:20px"></div>
         </div>
     </div>
 </div>
