--- a/src/main/resources/templates/admin/userManagement.html
+++ b/src/main/resources/templates/admin/userManagement.html
@@ -286,7 +286,7 @@
 <!--                <img src="/icons/userManagement.png" alt="회원 관리 아이콘">-->
             </div>
             <div class="title" style="font-weight: bold; font-size: x-large">회원 관리</div>
-            <div id="user-list"></div>
+            <div id="user-list" style="padding-top:20px"></div>
         </div>
     </div>
 </div>
