feig 적용 및 admin 월별 사용자 집계 aggregation 수정

--- a/src/main/resources/templates/health/prescriptionList.html
+++ b/src/main/resources/templates/health/prescriptionList.html
@@ -181,7 +181,7 @@
                 <img src="/icons/medicine.png" alt="약 이미지">
             </div>
             <div class="title" style="font-weight: bold; font-size: x-large">처방내역</div>
-            <div id="prescription-list"></div>
+            <div id="prescription-list" style="padding: 10px"></div>
         </div>
     </div>
 </div>
