관리자 기능 수정

--- a/src/main/resources/static/css/navStyles.css
+++ b/src/main/resources/static/css/navStyles.css
@@ -16,7 +16,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 1000px;
+    width: auto;
 }
 
 .nav-group {
