--- a/src/main/resources/templates/admin/banUserManagement.html
+++ b/src/main/resources/templates/admin/banUserManagement.html
@@ -117,8 +117,12 @@
             <a href="/user/index">하루약속</a>
         </div>
         <div class="nav-group" id="serviceNav">
-            <a href="/admin/userManagement">회원 관리</a>
-            <a href="/admin/banUserManagement">차단 회원 관리</a>
+            <a href="/health/prescriptionList">처방 내역 조회</a>
+            <a href="/health/auth">처방 내역 동기화</a>
+            <a href="/chat/chat">AI 챗봇 상담</a>
+            <a href="/map/map">주변 약국 찾기</a>
+            <a href="/admin/index"
+               th:if="${session.SS_USER != null and session.SS_USER.role != 'user'}">관리자</a>
         </div>
         <div class="nav-group same_width justify-right" id="beforeLoginNav" th:if="${session.SS_USER == null}">
             <a href="#" class="login" onclick="setReferrer()">로그인</a>
