--- a/src/main/resources/templates/health/reminder.html
+++ b/src/main/resources/templates/health/reminder.html
@@ -39,11 +39,13 @@
             <a href="/health/auth">처방 내역 동기화</a>
             <a href="/chat/chat">AI 챗봇 상담</a>
             <a href="/map/map">주변 약국 찾기</a>
+            <a href="/admin/index"
+               th:if="${session.SS_USER != null and session.SS_USER.role != 'user'}">관리자</a>
         </div>
-        <div class="nav-group same_width justify-right" th:if="${session.SS_USER == null}">
-            <a href="/user/signin" class="login" onclick="setReferrer()">로그인</a>
+        <div class="nav-group same_width justify-right" id="beforeLoginNav" th:if="${session.SS_USER == null}">
+            <a href="#" class="login" onclick="setReferrer()">로그인</a>
         </div>
-        <div class="nav-group after_login same_width justify-right" th:if="${session.SS_USER != null}">
+        <div class="nav-group after_login same_width justify-right" id="afterLoginNav" th:if="${session.SS_USER != null}">
             <a href="/user/pwd_verification" class="nav-icon" title="마이페이지">👤</a>
             <a href="/user/logout" class="login">로그아웃</a>
         </div>
