--- a/src/main/resources/templates/user/myPage.html
+++ b/src/main/resources/templates/user/myPage.html
@@ -165,24 +165,26 @@
 
 <!-- 네비게이션 바 -->
 <nav>
-  <div class="nav-content">
-    <div class="nav-group same_width justify-left">
-      <a href="/user/index">하루약속</a>
+    <div class="nav-content">
+        <div class="nav-group same_width justify-left">
+            <a href="/user/index">하루약속</a>
+        </div>
+        <div class="nav-group" id="serviceNav">
+            <a href="/health/prescriptionList">처방 내역 조회</a>
+            <a href="/health/auth">처방 내역 동기화</a>
+            <a href="/chat/chat">AI 챗봇 상담</a>
+            <a href="/map/map">주변 약국 찾기</a>
+            <a href="/admin/index"
+               th:if="${session.SS_USER != null and session.SS_USER.role != 'user'}">관리자</a>
+        </div>
+        <div class="nav-group same_width justify-right" id="beforeLoginNav" th:if="${session.SS_USER == null}">
+            <a href="#" class="login" onclick="setReferrer()">로그인</a>
+        </div>
+        <div class="nav-group after_login same_width justify-right" id="afterLoginNav" th:if="${session.SS_USER != null}">
+            <a href="/user/pwd_verification" class="nav-icon" title="마이페이지">👤</a>
+            <a href="/user/logout" class="login">로그아웃</a>
+        </div>
     </div>
-    <div class="nav-group" id="serviceNav">
-      <a href="/health/prescriptionList">처방 내역 조회</a>
-      <a href="/health/auth">처방 내역 동기화</a>
-      <a href="/chat/chat">AI 챗봇 상담</a>
-      <a href="/map/map">주변 약국 찾기</a>
-    </div>
-    <div class="nav-group same_width justify-right" id="beforeLoginNav" th:if="${session.SS_USER == null}">
-      <a href="#" class="login" onclick="setReferrer()">로그인</a>
-    </div>
-    <div class="nav-group after_login same_width justify-right" id="afterLoginNav" th:if="${session.SS_USER != null}">
-      <a href="/user/pwd_verification" class="nav-icon" title="마이페이지">👤</a>
-      <a href="/user/logout" class="login">로그아웃</a>
-    </div>
-  </div>
 </nav>
 
 <div class="content">
