페이지 로드 수정

--- a/src/main/resources/templates/user/find_id.html
+++ b/src/main/resources/templates/user/find_id.html
@@ -49,7 +49,7 @@
 <nav>
     <div class="nav-content">
         <div class="nav-group same_width justify-left">
-            <a href="/user/index">하루약속</a>
+            <a href="/">하루약속</a>
         </div>
         <div class="nav-group" id="serviceNav">
             <a href="/health/prescriptionList">처방 내역 조회</a>
